@@ -78,6 +78,7 @@ included, please mail to `the Google group
 * The Wine Cellar Book: http://www.thewinecellarbook.com/doc/en/
 * TurboGears: http://turbogears.org/2.0/docs/
 * VOR: http://www.vor-cycling.be/
+* WebFaction: http://docs.webfaction.com/
 * Werkzeug: http://werkzeug.pocoo.org/documentation/dev/
 * WFront: http://discorporate.us/projects/WFront/
 * WTForms: http://wtforms.simplecodes.com/docs/
