@@ -138,6 +138,7 @@ chm_locales = {
     'ru':    (0x419, 'cp1251'),
     'sl':    (0x424, 'iso8859_2'),
     'uk_UA': (0x422, 'cp1251'),
+    'zh_CN': (0x804, 'cp936'),
     'zh_TW': (0x404, 'cp950'),
 }
 
