@@ -38,6 +38,15 @@ Release 1.0 (in development)
 Release 0.6.3 (in development)
 ==============================
 
+* #253: Ignore graphviz directives without content instead of
+  raising an unhandled exception.
+
+* #241: Fix a crash building LaTeX output for documents that contain
+  a todolist directive.
+
+* #252: Make it easier to change the build dir in the Makefiles
+  generated by quickstart.
+
 * #220: Fix CSS so that displaymath really is centered.
 
 * #222: Allow the "Footnotes" header to be translated.
